# fbox

./: .gitignore  Cargo.toml  settings.json  settings.sample.json  settings_sample.json
frontend/: .prettierrc  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx  react-app-env.d.ts
frontend/src/components/FileInput/: index.tsx
frontend/src/components/SessionCodeForm/: index.tsx  style.scss
frontend/src/components/SessionQrCode/: index.tsx  style.scss
frontend/src/components/WebSocketService/: index.tsx
frontend/src/pages/Connection/: index.tsx  style.scss
frontend/src/pages/Loading/: index.tsx  style.scss
frontend/src/pages/Main/: FileButton.tsx  FileInput.tsx  IconAdd.tsx  IconDownload.tsx  index.tsx  style.scss
frontend/src/state/: index.tsx  sessionSocket.ts
frontend/src/styles/: _fonts.scss  _inputs.scss  colors.scss  inputs.scss  main.scss
frontend/src/styles/shared/: _media.scss
frontend/src/typings/: react-qr-code.d.ts
src/: main.rs  prelude.rs  settings.rs
src/api/: controllers.rs  filters.rs  mod.rs
src/api/res/: mod.rs
src/services/: mod.rs
src/services/sessions/: connection_handler.rs  mod.rs  session.rs  websocket.rs
