[package]
name = "fbox"
version = "0.1.0"
authors = ["LazyMechanic <AsharnRus@gmail.com>"]
edition = "2018"

[dependencies.tiny-bip39]
git = "https://github.com/BoringStudio/tiny-bip39"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
base64 = "0.12"
chrono = { version = "0.4", features = ["serde"] }
config = "0.9"
env_logger = "0.7"
futures = "0.3"
hyper = "0.13"
http = "0.2"
itertools = "0.9"
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["rt-threaded", "macros", "time"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
warp = "0.2"
